<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fff"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/viewport"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <LinearLayout
            android:id="@+id/viewport_summary"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:visibility="gone" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <ListView
                    android:id="@+id/lSearchResultListView"
                    android:layout_width="150dp"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="10dp"
                    android:cacheColorHint="#fff"
                    android:listSelector="#0fff"
                    android:scrollingCache="false" >
                </ListView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:orientation="vertical"
                android:padding="15dp" >

                <TextView
                    android:id="@+id/tTimeElapsed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Time elapsed 0 s"
                    android:textColor="#000" />

                <TextView
                    android:id="@+id/tReadings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Readings 0"
                    android:textColor="#000" />

                <TextView
                    android:id="@+id/tLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Location (x,y)"
                    android:textColor="#000" />

                <TextView
                    android:id="@+id/tMap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Map:"
                    android:textColor="#000" />

                <TextView
                    android:id="@+id/tApCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Total AP:"
                    android:textColor="#000" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/viewport_map"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#000000"
            android:visibility="gone" >

            <com.wikonos.views.MapView
                android:id="@+id/map_view"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/background_main"
        android:orientation="horizontal"
        android:padding="3dp" >

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:onClick="onClickHome"
            android:src="@drawable/icon_home" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/start_scan"
                style="@style/ButtonTextLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickFeature"
                android:text="@string/button_start" />

            <Button
                android:id="@+id/save_scan"
                style="@style/ButtonTextLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:onClick="onClickFeature"
                android:text="@string/button_save_scan" />

            <Button
                android:id="@+id/clear_scan"
                style="@style/ButtonTextLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:onClick="onClickFeature"
                android:text="@string/button_clear_scan" />

            <Button
                android:id="@+id/submit_scan"
                style="@style/ButtonTextLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:onClick="onClickFeature"
                android:text="@string/button_submit_scan" >
            </Button>

            <Button
                android:id="@+id/mode"
                style="@style/ButtonTextLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickFeature"
                android:text="@string/button_map" />

            <Button
                android:id="@+id/bGoBack"
                style="@style/ButtonTextLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickFeature"
                android:text="@string/button_back" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>