<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <include layout="@layout/inc_header" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="3dp"
        android:background="#FFFFFF"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#FFFFFF"
            android:orientation="horizontal" >

            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:layout_gravity="center_horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="15dp"
                    android:background="#FFFFFF"
                    android:orientation="vertical" >

                    <TableLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:background="#ff355689" >

                        <TableRow android:padding="5dp" >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/msg_login_user"
                                android:textColor="#FFFFFF" />
                        </TableRow>

                        <TableRow
                            android:layout_width="fill_parent"
                            android:layout_margin="3dp"
                            android:background="#ffffff"
                            android:padding="5dp" >

                            <EditText
                                android:id="@+id/login_user"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:singleLine="true"
                                android:text="" />
                        </TableRow>
                    </TableLayout>

                    <TableLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:background="#ff355689" >

                        <TableRow android:padding="5dp" >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/msg_login_pass"
                                android:textColor="#FFFFFF" />
                        </TableRow>

                        <TableRow
                            android:layout_width="fill_parent"
                            android:layout_margin="3dp"
                            android:background="#ffffff"
                            android:padding="5dp" >

                            <EditText
                                android:id="@+id/login_pass"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:password="true"
                                android:singleLine="true"
                                android:text="" />
                        </TableRow>
                    </TableLayout>

                    <TableLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:background="#ff355689" >

                        <TableRow android:padding="5dp" >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/msg_login_customer_id"
                                android:textColor="#FFFFFF" />
                        </TableRow>

                        <TableRow
                            android:layout_width="fill_parent"
                            android:layout_margin="3dp"
                            android:background="#ffffff"
                            android:padding="5dp" >

                            <EditText
                                android:id="@+id/login_customer_id"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:singleLine="true"
                                android:text="" />
                        </TableRow>
                    </TableLayout>

                    <TableLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:background="#ff355689" >

                        <TableRow android:padding="5dp" >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/msg_login_developer_id"
                                android:textColor="#FFFFFF" />
                        </TableRow>

                        <TableRow
                            android:layout_width="fill_parent"
                            android:layout_margin="3dp"
                            android:background="#ffffff"
                            android:padding="5dp" >

                            <EditText
                                android:id="@+id/login_developer_id"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:singleLine="true"
                                android:text="" />
                        </TableRow>
                    </TableLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="right" >

                        <Button
                            android:id="@+id/intent_about"
                            style="@style/ButtonText"
                            android:onClick="doLogin"
                            android:text="@string/button_login" >
                        </Button>
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>